--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Cropped_pics/
 pictures_germination_2025
 pictures_germination_2025.zip
+Cropped_germination_pictures.zip
+Cropped_germination_pictures
