Tested parameters for green fraction, and plotted the results. Added workspace, and updated .gitignore to exclude workspace files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ pictures_germination_2025
 pictures_germination_2025.zip
 Cropped_germination_pictures.zip
 Cropped_germination_pictures
+#Ignore data files
+Germination_workspace.code-workspace
