Added workspace for other computer to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Cropped_germination_pictures.zip
 Cropped_germination_pictures
 #Ignore data files
 Germination_workspace.code-workspace
+Master_Genetikk_og_utviklingsbiologi.code-workspace
